--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Python 3.8
+    - name: Set up Python 3.12.8
       uses: actions/setup-python@v3
       with:
-        python-version: "3.8"
+        python-version: "3.12.8"
 
     - name: Install dependencies
       run: |
@@ -32,4 +32,4 @@ jobs:
       run: PYTHONPATH=src pytest
 
     - name: Test Coverage
-      run: PYTHONPATH=src pytest --cov stt-silero-vs-pyannote
+      run: PYTHONPATH=src pytest --cov silero-vs-pyannote
